Fixed Scoreboard Height on Mobile

--- a/style.css
+++ b/style.css
@@ -38,3 +38,10 @@ html body {
 #computer-choice {
     text-transform: capitalize !important;
 }
+
+@media only screen and (max-width: 767px) {
+    #player-choice,
+    #computer-choice {
+        display: block;
+    }
+}
